--- a/models/sources.yml
+++ b/models/sources.yml
@@ -20,6 +20,12 @@ sources:
     schema: core
     tables:
       - name: fact_transactions
+  - name: ethereum_silver
+    database: ethereum
+    schema: silver
+    tables:
+      - name: logs
+      - name: traces
   - name: crosschain_external
     schema: bronze
     loader: S3
