active on ETH and L2 last 7 full history

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -25,15 +25,15 @@ clean-targets: # directories to be removed by `dbt clean`
   - "dbt_packages"
 
 on-run-start:
-  - "{{ create_sps() }}"
-  - '{{ create_udfs() }}'
-  - '{{ sp_create_bulk_fill_cmc_historical_price_gaps() }}'
-  - '{{ sp_create_bulk_get_coin_gecko_asset_metadata() }}'
-  - '{{ sp_create_bulk_get_coin_market_cap_asset_metadata() }}'
-  - '{{ sp_create_bulk_get_coin_market_cap_prices() }}'
-  - '{{ sp_create_bulk_get_coin_gecko_prices() }}'
-  - '{{ sp_create_bulk_get_coin_market_cap_hourly_ohlc() }}'
-  - '{{create_tasks()}}'
+  # - "{{ create_sps() }}"
+  # - '{{ create_udfs() }}'
+  # - '{{ sp_create_bulk_fill_cmc_historical_price_gaps() }}'
+  # - '{{ sp_create_bulk_get_coin_gecko_asset_metadata() }}'
+  # - '{{ sp_create_bulk_get_coin_market_cap_asset_metadata() }}'
+  # - '{{ sp_create_bulk_get_coin_market_cap_prices() }}'
+  # - '{{ sp_create_bulk_get_coin_gecko_prices() }}'
+  # - '{{ sp_create_bulk_get_coin_market_cap_hourly_ohlc() }}'
+  # - '{{create_tasks()}}'
 
 
 # Configuring models
