--- a/models/sources.yml
+++ b/models/sources.yml
@@ -20,21 +20,54 @@ sources:
     schema: core
     tables:
       - name: fact_transactions
-<<<<<<< HEAD
-  - name: thorchain
-    database: flipside_prod_db
-    schema: thorchain
-    tables:
-      - name: swaps
-      - name: liquidity_actions
-=======
   - name: ethereum_silver
     database: ethereum
     schema: silver
     tables:
       - name: logs
       - name: traces
->>>>>>> main
+      - name: transactions
+  - name: arbitrum_silver
+    database: arbitrum
+    schema: silver
+    tables:
+      - name: logs
+      - name: traces
+      - name: transactions
+  - name: avalanche_silver
+    database: avalanche
+    schema: silver
+    tables:
+      - name: logs
+      - name: traces
+      - name: transactions
+  - name: polygon_silver
+    database: polygon
+    schema: silver
+    tables:
+      - name: logs
+      - name: traces
+      - name: transactions
+  - name: optimism_silver
+    database: optimism
+    schema: silver
+    tables:
+      - name: logs
+      - name: traces
+      - name: transactions
+  - name: bsc_silver
+    database: bsc
+    schema: silver
+    tables:
+      - name: logs
+      - name: traces
+      - name: transactions
+  - name: thorchain
+    database: flipside_prod_db
+    schema: thorchain
+    tables:
+      - name: swaps
+      - name: liquidity_actions
   - name: crosschain_external
     schema: bronze
     loader: S3
