--- a/models/sources.yml
+++ b/models/sources.yml
@@ -8,6 +8,11 @@ sources:
       - name: prices_v2
       - name: market_asset_metadata
       - name: hours
+  - name: legacy_silver_crosschain
+    database: flipside_prod_db
+    schema: silver_crosschain
+    tables:
+      - name: ntr
   - name: legacy_dev_db
     database: flipside_dev_db
     schema: silver
@@ -15,11 +20,17 @@ sources:
       - name: prices_v2
       - name: market_asset_metadata
       - name: hours
+  - name: crosschain_dev_silver
+    database: crosschain_dev
+    schema: silver
+    tables:
+      - name: dates_table
   - name: ethereum_core
     database: ethereum
     schema: core
     tables:
       - name: fact_transactions
+      - name: ez_nft_sales
   - name: ethereum_silver
     database: ethereum
     schema: silver
