--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -39,6 +39,11 @@ on-run-start:
 
 # Configuring models
 # Full documentation: https://docs.getdbt.com/docs/configuring-models
+models:
+  +copy_grants: true
+  +persist_docs:
+    relation: true
+    columns: true
 
 # In this example config, we tell dbt to build all models in the example/ directory
 # as tables. These settings can be overridden in the individual model files
