Added Wallet value tags

--- a/models/sources.yml
+++ b/models/sources.yml
@@ -32,6 +32,7 @@ sources:
     tables:
       - name: fact_transactions
       - name: ez_nft_sales
+      - name: ez_current_balances
   - name: ethereum_silver
     database: ethereum
     schema: silver
