--- a/models/sources.yml
+++ b/models/sources.yml
@@ -41,6 +41,11 @@ sources:
       - name: traces
       - name: transactions
       - name: labels
+  - name: crosschain_silver
+    database: crosschain
+    schema: silver
+    tables:
+      - name: godmode_nft_minters
   - name: ethereum_silver_nft
     database: ethereum
     schema: silver_nft
