--- a/models/sources.yml
+++ b/models/sources.yml
@@ -40,6 +40,11 @@ sources:
       - name: logs
       - name: traces
       - name: transactions
+  - name: crosschain_silver
+    database: crosschain
+    schema: silver
+    tables:
+      - name: godmode_nft_minters
   - name: ethereum_silver_nft
     database: ethereum
     schema: silver_nft
