--- a/models/sources.yml
+++ b/models/sources.yml
@@ -40,6 +40,7 @@ sources:
       - name: logs
       - name: traces
       - name: transactions
+      - name: labels
   - name: crosschain_silver
     database: crosschain
     schema: silver
