--- a/models/core/core__fact_hourly_prices.yml
+++ b/models/core/core__fact_hourly_prices.yml
@@ -1,9 +1,10 @@
 version: 2
 models:
-  - name: core__ez_hourly_prices
+  - name: core__fact_hourly_prices
     tests:
       - dbt_utils.unique_combination_of_columns:
           combination_of_columns:
+            - PROVIDER
             - ID
             - RECORDED_HOUR
     columns:
@@ -15,12 +16,6 @@ models:
         tests:
           - dbt_expectations.expect_column_to_exist
       - name: RECORDED_HOUR
-        tests:
-          - dbt_expectations.expect_column_to_exist
-      - name: NAME
-        tests:
-          - dbt_expectations.expect_column_to_exist
-      - name: SYMBOL 
         tests:
           - dbt_expectations.expect_column_to_exist
       - name: OPEN
