--- a/models/core/core__dim_asset_metadata.yml
+++ b/models/core/core__dim_asset_metadata.yml
@@ -1,6 +1,7 @@
 version: 2
 models:
   - name: core__dim_asset_metadata
+    description: A fact table holding provider asset prices
     tests:
       - dbt_utils.unique_combination_of_columns:
           combination_of_columns:
@@ -9,20 +10,28 @@ models:
             - TOKEN_ADDRESS
     columns:
       - name: PROVIDER
+        description: provider of the data
         tests:
           - not_null
           - dbt_expectations.expect_column_to_exist
       - name: ID
+        description: unique identifier representing the asset
         tests:
           - dbt_expectations.expect_column_to_exist
       - name: NAME
+        description: name of asset
         tests:
           - dbt_expectations.expect_column_to_exist
       - name: SYMBOL
+        description: symbol of asset
         tests:
           - dbt_expectations.expect_column_to_exist
       - name: TOKEN_ADDRESS
+        description: specific address representing the asset in a specific platform
+        tests:
+          - dbt_expectations.expect_column_to_exist
       - name: PLATFORM
+        description: platform where this asset has a token address
         tests:
           - dbt_expectations.expect_column_to_exist
       
