update table/column descriptions

--- a/models/silver/silver__hourly_prices_coin_gecko.yml
+++ b/models/silver/silver__hourly_prices_coin_gecko.yml
@@ -8,15 +8,18 @@ models:
             - RECORDED_HOUR
     columns:
       - name: ID
+        description: unique identifier representing the asset
         tests:
           - not_null
       - name: RECORDED_HOUR
+        description: opening hour of price data
         tests:
           - not_null
           - dbt_expectations.expect_row_values_to_have_recent_data:
               datepart: day
               interval: 1
       - name: OPEN
+        description: open price of asset for hour
         tests:
           - not_null
           - dbt_expectations.expect_column_values_to_be_in_type_list:
@@ -24,6 +27,7 @@ models:
                 - FLOAT
                 - DOUBLE
       - name: HIGH
+        description: high price of asset for hour
         tests:
           - not_null
           - dbt_expectations.expect_column_values_to_be_in_type_list:
@@ -31,6 +35,7 @@ models:
                 - FLOAT
                 - DOUBLE
       - name: LOW
+        description: low price of asset for hour
         tests:
           - not_null
           - dbt_expectations.expect_column_values_to_be_in_type_list:
@@ -38,6 +43,7 @@ models:
                 - FLOAT
                 - DOUBLE
       - name: CLOSE
+        description: close price of asset for hour
         tests:
           - not_null
           - dbt_expectations.expect_column_values_to_be_in_type_list:
@@ -45,6 +51,7 @@ models:
                 - FLOAT
                 - DOUBLE
       - name: _INSERTED_TIMESTAMP
+        description: Time the record was inserted into snowflake
         tests:
           - not_null
       
