change model references to new streamline sources location

--- a/models/sources.yml
+++ b/models/sources.yml
@@ -99,129 +99,12 @@ sources:
     tables:
       - name: swaps
       - name: liquidity_actions
-  - name: crosschain_external
-    schema: bronze
-    loader: S3
+  - name: bronze_streamline
+    database: streamline
+    schema: crosschain
     tables:
       - name: asset_metadata_coin_market_cap_api
-        description: "all coins supported by provider"
-        external:
-          location: "@crosschain.bronze.analytics_external_tables/{{target.database}}/ASSET_METADATA_API/coinmarketcap"
-          file_format: "( type = json, strip_outer_array = TRUE )"
-          auto_refresh: true
-          partitions:
-            - name: provider
-              data_type: string 
-              expression: split_part(METADATA$FILENAME,'/',3)
-            - name: _inserted_date
-              data_type: string
-              expression: substr((split_part(METADATA$FILENAME,'/',4)),16,10)
-        columns:
-          - name: id
-            data_type: string
-            description: ""
-          - name: symbol
-            data_type: string
-            description: ""
-          - name: name
-            data_type: string
-            description: ""
       - name: asset_metadata_coin_gecko_api
-        description: "all coins supported by provider"
-        external:
-          location: "@crosschain.bronze.analytics_external_tables/{{target.database}}/ASSET_METADATA_API/coingecko"
-          file_format: "( type = json, strip_outer_array = TRUE )"
-          auto_refresh: true
-          partitions:
-            - name: provider
-              data_type: string 
-              expression: split_part(METADATA$FILENAME,'/',3)
-            - name: _inserted_date
-              data_type: string
-              expression: substr((split_part(METADATA$FILENAME,'/',4)),16,10)
-        columns:
-          - name: id
-            data_type: string
-            description: ""
-          - name: symbol
-            data_type: string
-            description: ""
-          - name: name
-            data_type: string
-            description: ""
       - name: asset_ohlc_coin_market_cap_api
-        description: "all coins supported by provider"
-        external:
-          location: "@crosschain.bronze.analytics_external_tables/{{target.database}}/ASSET_OHLC_API/coinmarketcap"
-          file_format: "( type = json, strip_outer_array = TRUE )"
-          auto_refresh: true
-          partitions:
-            - name: _inserted_date
-              data_type: string
-              expression: substr((split_part(METADATA$FILENAME,'/',4)),16,10)
-        columns:
-          - name: id
-            data_type: number
-            description: ""
-          - name: api_start_time
-            data_type: number
-          - name: api_end_time
-            data_type: number
-          - name: metadata
-            data_type: string
-            description: ""
-          - name: data
-            data_type: variant
-            description: ""
       - name: asset_historical_hourly_market_data_coin_gecko_api
-        description: "all coins supported by provider"
-        external:
-          location: "@crosschain.bronze.analytics_external_tables/{{target.database}}/ASSET_HISTORICAL_HOURLY_MARKET_DATA_API/coingecko"
-          file_format: "( type = json, strip_outer_array = TRUE )"
-          auto_refresh: true
-          partitions:
-            - name: _inserted_date
-              data_type: string
-              expression: substr((split_part(METADATA$FILENAME,'/',4)),16,10)
-        columns:
-          - name: id
-            data_type: string
-            description: ""
-          - name: currency
-            data_type: string
-          - name: metadata
-            data_type: variant
-            description: ""
-          - name: data
-            data_type: variant
-            description: ""
-          - name: error
-            data_type: string
-            description: ""
       - name: asset_ohlc_coin_gecko_api
-        description: "all coins supported by provider"
-        external:
-          location: "@crosschain.bronze.analytics_external_tables/{{target.database}}/ASSET_OHLC_API/coingecko"
-          file_format: "( type = json, strip_outer_array = TRUE )"
-          auto_refresh: true
-          partitions:
-            - name: _inserted_date
-              data_type: string
-              expression: substr((split_part(METADATA$FILENAME,'/',4)),16,10)
-        columns:
-          - name: id
-            data_type: string
-            description: ""
-          - name: run_time
-            data_type: timestamp_ntz
-          - name: metadata
-            data_type: string
-            description: ""
-          - name: data
-            data_type: variant
-            description: ""
-          - name: error
-            data_type: string
-            description: ""
-      
-  
