FIXED left outer references

--- a/models/silver/silver__tags_nft_transactor_ETH.yml
+++ b/models/silver/silver__tags_nft_transactor_ETH.yml
@@ -6,6 +6,7 @@ models:
           combination_of_columns:
             - ADDRESS
             - TAG_NAME
+            - START_DATE
     columns:
       - name: ADDRESS
         tests:
