More deposit wallets (#56)
* algorand dep_wallets

* some new dep

* fixed timestamps

* some more fixes

* added yml

* changed ref, added thor

* added to core

--- a/models/sources.yml
+++ b/models/sources.yml
@@ -146,6 +146,12 @@ sources:
     tables:
       - name: swaps
       - name: liquidity_actions
+      - name: transfers
+  - name: thorchain_core
+    database: thorchain
+    schema: core
+    tables:
+      - name: fact_transfers
   - name: flow_core
     database: flow
     schema: core
@@ -153,6 +159,16 @@ sources:
       - name: ez_token_transfers
   - name: solana_core
     database: solana
+    schema: core
+    tables:
+      - name: fact_transfers
+  - name: near_core
+    database: near
+    schema: core
+    tables:
+      - name: fact_transfers
+  - name: osmosis_core
+    database: osmosis
     schema: core
     tables:
       - name: fact_transfers
