--- a/models/sources.yml
+++ b/models/sources.yml
@@ -162,6 +162,7 @@ sources:
     schema: core
     tables:
       - name: fact_transfers
+      - name: dim_nft_metadata
   - name: near_core
     database: near
     schema: core
@@ -186,3 +187,4 @@ sources:
     schema: bronze
     tables: 
       - name: prod_address_label_sink_291098491
+      - name: prod_data_science_uploads_1748940988
