--- a/models/sources.yml
+++ b/models/sources.yml
@@ -189,7 +189,7 @@ sources:
       - name: prod_address_label_sink_291098491
   - name: Harmony_db
     database: HARMONY
-    schema: PROD
+    schema: SUSHI
     tables:
       - name: EZ_SUSHI_SWAPS
   - name: polygon
