--- a/models/silver/labels/contract_autolabel/silver__labels_contracts_bsc.yml
+++ b/models/silver/labels/contract_autolabel/silver__labels_contracts_bsc.yml
@@ -1,6 +1,6 @@
 version: 2
 models:
-  - name: silver_crosschain__labels_contracts
+  - name: silver__labels_contracts_bsc
     tests:
       - dbt_utils.unique_combination_of_columns:
           combination_of_columns:
@@ -11,7 +11,7 @@ models:
         tests:
           - not_null
           - dbt_expectations.expect_column_values_to_be_in_set:
-              value_set: ['ethereum']
+              value_set: ['bsc']
       - name: ADDRESS
         description: Address that the label is for. This is the field that should be used to join other tables with labels. 
         tests:
