--- a/models/silver/labels/silver__address_labels.yml
+++ b/models/silver/labels/silver__address_labels.yml
@@ -1,6 +1,6 @@
 version: 2
 models:
-  - name: silver_crosschain__address_labels
+  - name: silver__address_labels
     tests:
       - dbt_utils.unique_combination_of_columns:
           combination_of_columns:
