--- a/models/silver/labels/silver__deposit_wallets.yml
+++ b/models/silver/labels/silver__deposit_wallets.yml
@@ -1,6 +1,6 @@
 version: 2
 models:
-  - name: silver__address_labels
+  - name: silver__deposit_wallets
     tests:
       - dbt_utils.unique_combination_of_columns:
           combination_of_columns:
