--- a/models/defillama/silver/silver__defillama_bridges.yml
+++ b/models/defillama/silver/silver__defillama_bridges.yml
@@ -9,15 +9,15 @@ models:
     columns:
       - name: BRIDGE_ID
         tests:
-          - not null
+          - not_null
       - name: BRIDGE
         tests: 
-          - not null
+          - not_null
       - name: CHAINS
       - name: DESTINATION_CHAIN
       - name: _INSERTED_TIMESTAMP
         tests:
-          - not null
+          - not_null
           - dbt_expectations.expect_column_values_to_be_in_type_list:
               column_type_list:
                 - TIMESTAMP_NTZ
