added fact table for chain tvl

--- a/models/defillama/silver/silver__defillama_chains_tvl.yml
+++ b/models/defillama/silver/silver__defillama_chains_tvl.yml
@@ -8,6 +8,9 @@ models:
               - TIMESTAMP
     
     columns:
+      - name: CHAIN
+        tests:
+          - not_null
       - name: TIMESTAMP
       - name: TVL_USD
       - name: _INSERTED_TIMESTAMP
