--- a/models/sources.yml
+++ b/models/sources.yml
@@ -160,6 +160,11 @@ sources:
     schema: core
     tables:
       - name: fact_transfers
+  - name: solana_silver
+    database: solana
+    schema: silver
+    tables:
+      - name: events
   - name: near_core
     database: near
     schema: core
