--- a/.github/workflows/dbt_run_streamline_coinggecko_ohlc.yml
+++ b/.github/workflows/dbt_run_streamline_coinggecko_ohlc.yml
@@ -20,22 +20,12 @@ env:
 
 
 jobs:
-  run_dbt_jobs:
-    runs-on: ubuntu-latest
-    environment: 
-      name: workflow_prod
-
-    steps:
-      - uses: actions/checkout@v3
-
-      - uses: actions/setup-python@v1
-        with:
-          python-version: "3.7.x"
-
-      - name: install dependencies
-        run: |
-          pip3 install dbt-snowflake==1.3.0 cli_passthrough requests click
-          dbt deps
-      - name: Run DBT Jobs
-        run: |
-          dbt run-operation stage_external_sources -t prod --vars "ext_full_refresh: true" --args "select: crosschain_external.asset_ohlc_coin_gecko_api"
+  called_workflow_template:
+    uses: FlipsideCrypto/analytics-workflow-templates/.github/workflows/dbt_run_template.yml@separate-envs-and-allow-dbt-ver
+    with:
+      dbt_command: |
+                dbt run-operation stage_external_sources -t prod --vars "ext_full_refresh: true" --args "select: crosschain_external.asset_ohlc_coin_gecko_api"
+      environment: workflow_${{ inputs.environment }}
+      warehouse: ${{ inputs.warehouse }}
+    secrets: inherit 
+          
