--- a/.github/workflows/dbt_run_adhoc.yml
+++ b/.github/workflows/dbt_run_adhoc.yml
@@ -41,26 +41,11 @@ env:
 
 
 jobs:
-  run_dbt_jobs:
-    runs-on: ubuntu-latest
-    environment: 
-      name: workflow_${{ inputs.environment }}
-    strategy:
-      matrix:
-        command: ${{fromJson(inputs.dbt_command)}}
-
-    steps:
-      - uses: actions/checkout@v3
-
-      - uses: actions/setup-python@v1
-        with:
-          python-version: "3.7.x"
-
-      - name: install dependencies
-        run: |
-          pip3 install dbt-snowflake==1.3.0 cli_passthrough requests click
-          dbt deps
-      - name: Run DBT Jobs
-        run: |
-          ${{ matrix.command }}
+  called_workflow_template:
+    uses: FlipsideCrypto/analytics-workflow-templates/.github/workflows/dbt_run_template.yml@separate-envs-and-allow-dbt-ver
+    with:
+      dbt_command: ${{ inputs.dbt_command }}
+      environment: workflow_${{ inputs.environment }}
+      warehouse: ${{ inputs.warehouse }}
+    secrets: inherit 
   
