--- a/.github/workflows/dbt_run_streamline_coinggecko_ohlc.yml
+++ b/.github/workflows/dbt_run_streamline_coinggecko_ohlc.yml
@@ -21,10 +21,10 @@ env:
 
 jobs:
   called_workflow_template:
-    uses: FlipsideCrypto/analytics-workflow-templates/.github/workflows/dbt_run_template.yml@separate-envs-and-allow-dbt-ver
+    uses: FlipsideCrypto/analytics-workflow-templates/.github/workflows/dbt_run_template.yml@main
     with:
       dbt_command: |
-                dbt run-operation stage_external_sources -t prod --vars "ext_full_refresh: true" --args "select: crosschain_external.asset_ohlc_coin_gecko_api"
+              ["dbt run-operation stage_external_sources -t prod --vars "ext_full_refresh: true" --args "select: crosschain_external.asset_ohlc_coin_gecko_api" "]
       environment: workflow_${{ inputs.environment }}
       warehouse: ${{ inputs.warehouse }}
     secrets: inherit 
