--- a/.github/workflows/dbt_run_streamline_market_asset.yml
+++ b/.github/workflows/dbt_run_streamline_market_asset.yml
@@ -21,11 +21,11 @@ env:
 
 jobs:
   called_workflow_template:
-    uses: FlipsideCrypto/analytics-workflow-templates/.github/workflows/dbt_run_template.yml@separate-envs-and-allow-dbt-ver
+    uses: FlipsideCrypto/analytics-workflow-templates/.github/workflows/dbt_run_template.yml@main
     with:
       dbt_command: |
-                dbt run-operation run_sp_bulk_get_coin_market_cap_asset_metadata
-                dbt run-operation run_sp_bulk_get_coin_gecko_asset_metadata
+                ["dbt run-operation run_sp_bulk_get_coin_market_cap_asset_metadata",
+                "dbt run-operation run_sp_bulk_get_coin_gecko_asset_metadata"]
       environment: workflow_${{ inputs.environment }}
       warehouse: ${{ inputs.warehouse }}
     secrets: inherit 
