--- a/.github/workflows/dbt_run_streamline_price_gap_fill.yml
+++ b/.github/workflows/dbt_run_streamline_price_gap_fill.yml
@@ -21,10 +21,9 @@ env:
 
 jobs:
   called_workflow_template:
-    uses: FlipsideCrypto/analytics-workflow-templates/.github/workflows/dbt_run_template.yml@separate-envs-and-allow-dbt-ver
+    uses: FlipsideCrypto/analytics-workflow-templates/.github/workflows/dbt_run_template.yml@main
     with:
-      dbt_command: |
-                dbt run-operation run_sp_bulk_fill_cmc_historical_price_gaps
+      dbt_command: ["dbt run-operation run_sp_bulk_fill_cmc_historical_price_gaps"]
       environment: workflow_${{ inputs.environment }}
       warehouse: ${{ inputs.warehouse }}
     secrets: inherit 
