--- a/.github/workflows/dbt_run_hourly.yml
+++ b/.github/workflows/dbt_run_hourly.yml
@@ -1,10 +1,11 @@
-name: dbt_run_streamline_price_gap_fill
-run-name: dbt_run_streamline_price_gap_fill
+name: dbt_run_scheduled
+run-name: dbt_run_scheduled
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 5 * * *'
+    # Runs "every hour" (see https://crontab.guru)
+    - cron: '0 */1 * * *'
     
 env:
   DBT_PROFILES_DIR: ./
@@ -23,7 +24,8 @@ jobs:
   called_workflow_template:
     uses: FlipsideCrypto/analytics-workflow-templates/.github/workflows/dbt_run_template.yml@main
     with:
-      dbt_command: ["dbt run-operation run_sp_bulk_fill_cmc_historical_price_gaps"]
+      dbt_command: |
+              ["dbt run -s models/silver/hourly_prices+"]
       environment: workflow_${{ inputs.environment }}
       warehouse: ${{ inputs.warehouse }}
     secrets: inherit 
