AN-2637 more actions (#88)
* more actions

* use template

* clean up adhocs

* template updates, job cleanup

* escape double quotes

* cleanup and set DBT_PROFILES_DIR: to secret

--- a/.github/workflows/dbt_run_cmc_cryptocurrency_monthly.yml
+++ b/.github/workflows/dbt_run_cmc_cryptocurrency_monthly.yml
@@ -1,11 +1,11 @@
-name: dbt_run_scheduled
-run-name: dbt_run_scheduled
+name: dbt_run_cmc_cryptocurrency_monthly
+run-name: dbt_run_cmc_cryptocurrency_monthly
 
 on:
   workflow_dispatch:
   schedule:
-    # Runs "every hour" (see https://crontab.guru)
-    - cron: '0 */1 * * *'
+    # “At minute 10, 20, 30, and 40 past hour 1 on day-of-month 1.”
+    - cron: '10,20,30,40 1 1 * *'
     
 env:
   DBT_PROFILES_DIR: "${{ secrets.DBT_PROFILES_DIR }}"
@@ -24,8 +24,8 @@ jobs:
   called_workflow_template:
     uses: FlipsideCrypto/analytics-workflow-templates/.github/workflows/dbt_run_template.yml@main
     with:
-      dbt_command: ["dbt run -s models/silver/hourly_prices+"]
+      dbt_command: ["dbt run -m models/bronze_api/bronze_api__coin_market_cap_cryptocurrency_info.sql+"]
       environment: workflow_${{ inputs.environment }}
       warehouse: ${{ inputs.warehouse }}
     secrets: inherit 
-          
+
