--- a/.github/workflows/dbt_run_dev_refresh.yml
+++ b/.github/workflows/dbt_run_dev_refresh.yml
@@ -1,11 +1,9 @@
-name: dbt_run_scheduled
-run-name: dbt_run_scheduled
+name: dbt_run_dev_refresh
+run-name: dbt_run_dev_refresh
 
 on:
-  workflow_dispatch:
   schedule:
-    # Runs "every hour" (see https://crontab.guru)
-    - cron: '0 */1 * * *'
+    - cron: '0 3 * * *'
     
 env:
   DBT_PROFILES_DIR: "${{ secrets.DBT_PROFILES_DIR }}"
@@ -24,8 +22,8 @@ jobs:
   called_workflow_template:
     uses: FlipsideCrypto/analytics-workflow-templates/.github/workflows/dbt_run_template.yml@main
     with:
-      dbt_command: ["dbt run -s models/silver/hourly_prices+"]
+      dbt_command: ["dbt run-operation run_sp_create_prod_clone"]
       environment: workflow_${{ inputs.environment }}
       warehouse: ${{ inputs.warehouse }}
     secrets: inherit 
-          
+
