add abis to crosschain silver

--- a/models/sources.yml
+++ b/models/sources.yml
@@ -45,6 +45,7 @@ sources:
       - name: traces
       - name: transactions
       - name: labels
+      - name: abis
   - name: crosschain_silver
     database: crosschain
     schema: silver
