--- a/.github/workflows/dbt_run_daily.yml
+++ b/.github/workflows/dbt_run_daily.yml
@@ -25,6 +25,6 @@ jobs:
     uses: FlipsideCrypto/analytics-workflow-templates/.github/workflows/dbt_run_template.yml@main
     with:
       dbt_command: ["dbt run -s ./models --exclude models/silver/hourly_prices+ models/bronze_api"]
-      environment: workflow_${{ inputs.environment }}
-      warehouse: ${{ inputs.warehouse }}
+      environment: workflow_prod
+      warehouse: ${{ secrets.WAREHOUSE }}
     secrets: inherit 
