--- a/.github/workflows/dbt_run_streamline_market_asset.yml
+++ b/.github/workflows/dbt_run_streamline_market_asset.yml
@@ -25,7 +25,7 @@ jobs:
     with:
       dbt_command: ["dbt run-operation run_sp_bulk_get_coin_market_cap_asset_metadata",
                 "dbt run-operation run_sp_bulk_get_coin_gecko_asset_metadata"]
-      environment: workflow_${{ inputs.environment }}
-      warehouse: ${{ inputs.warehouse }}
+      environment: workflow_prod
+      warehouse: ${{ secrets.WAREHOUSE }}
     secrets: inherit 
           
