--- a/.github/workflows/dbt_run_hourly.yml
+++ b/.github/workflows/dbt_run_hourly.yml
@@ -26,6 +26,6 @@ jobs:
     with:
       dbt_command: ["dbt run -s models/silver/hourly_prices+"]
       environment: workflow_prod
-      warehouse: ${{ vars.WAREHOUSE }}
+      warehouse: DBT_CLOUD
     secrets: inherit 
           
