--- a/.github/workflows/dbt_run_cmc_cryptocurrency_monthly.yml
+++ b/.github/workflows/dbt_run_cmc_cryptocurrency_monthly.yml
@@ -24,8 +24,8 @@ jobs:
   called_workflow_template:
     uses: FlipsideCrypto/analytics-workflow-templates/.github/workflows/dbt_run_template.yml@main
     with:
-      dbt_command: ["dbt run -m models/bronze_api/bronze_api__coin_market_cap_cryptocurrency_info.sql+"]
+      dbt_command: "[\"dbt run -m models/bronze_api/bronze_api__coin_market_cap_cryptocurrency_info.sql+\"]"
       environment: workflow_prod
-      warehouse: ${{ secrets.WAREHOUSE }}
+      warehouse: ${{ vars.WAREHOUSE }}
     secrets: inherit 
 
