--- a/.github/workflows/dbt_run_dev_refresh.yml
+++ b/.github/workflows/dbt_run_dev_refresh.yml
@@ -22,8 +22,8 @@ jobs:
   called_workflow_template:
     uses: FlipsideCrypto/analytics-workflow-templates/.github/workflows/dbt_run_template.yml@main
     with:
-      dbt_command: ["dbt run-operation run_sp_create_prod_clone"]
+      dbt_command: "[\"dbt run-operation run_sp_create_prod_clone\"]"
       environment: workflow_prod
-      warehouse: ${{ secrets.WAREHOUSE }}
+      warehouse: ${{ vars.WAREHOUSE }}
     secrets: inherit 
 
