missed vars change

--- a/.github/workflows/dbt_run_streamline_coinggecko_ohlc.yml
+++ b/.github/workflows/dbt_run_streamline_coinggecko_ohlc.yml
@@ -25,6 +25,6 @@ jobs:
     with:
       dbt_command: "[\"dbt run-operation stage_external_sources -t prod --vars \\\"ext_full_refresh: true\\\" --args \\\"select: crosschain_external.asset_ohlc_coin_gecko_api\\\"\"]"
       environment: workflow_prod
-      warehouse: ${{ secrets.WAREHOUSE }}
+      warehouse: ${{ vars.WAREHOUSE }}
     secrets: inherit 
           
