--- a/models/core/core__address_labels.yml
+++ b/models/core/core__address_labels.yml
@@ -13,7 +13,29 @@ models:
         tests:
           - not_null
           - dbt_expectations.expect_column_values_to_be_in_set:
-              value_set: ['ethereum', 'flow', 'polygon', 'terra', 'algorand', 'solana', 'moonriver', 'avalanche', 'bittorrent', 'cronos', 'fantom', 'arbitrum', 'aurora', 'bsc', 'heco', 'optimism', 'gnosis', 'thorchain','near', 'terra_classic', 'axelar']
+              value_set: ['algorand'
+                        ,'arbitrum'
+                        ,'aurora'
+                        ,'avalanche'
+                        ,'axelar'
+                        ,'bittorrent'
+                        ,'bsc'
+                        ,'cosmos'
+                        ,'cronos'
+                        ,'ethereum'
+                        ,'fantom'
+                        ,'flow'
+                        ,'gnosis'
+                        ,'heco'
+                        ,'moonriver'
+                        ,'near'
+                        ,'optimism'
+                        ,'osmosis'
+                        ,'polygon'
+                        ,'solana'
+                        ,'terra'
+                        ,'terra_classic'
+                        ,'thorchain']
       - name: CREATOR
         description: The name of the creator of the label
         tests:
