--- a/models/silver/tags/Osmosis/silver__tags_icns.yml
+++ b/models/silver/tags/Osmosis/silver__tags_icns.yml
@@ -6,6 +6,7 @@ models:
           combination_of_columns:
             - ADDRESS
             - START_DATE
+            - TAG_NAME
     columns:
       - name: ADDRESS
         tests:
