--- a/models/silver/labels/contract_autolabel/ethereum/silver__labels_eth_contracts_table.yml
+++ b/models/silver/labels/contract_autolabel/ethereum/silver__labels_eth_contracts_table.yml
@@ -26,13 +26,13 @@ models:
         description: The name of the creator of the label
         tests:
           - not_null
-      - name: L1_LABEL
+      - name: label_type
         description: A high-level category describing the addresses main function or ownership
         tests:
           - not_null
           - dbt_expectations.expect_column_values_to_be_in_set:
               value_set: ['flotsam', 'nft', 'defi', 'dex', 'cex', 'dapp', 'token', 'operator', 'layer2', 'chadmin']
-      - name: L2_LABEL
+      - name: label_subtype
         description: A sub-category nested within label type providing further detail
         tests:
           - not_null
