update input dbt_command format (#106)
* update input dbt_command format

* pr comment

--- a/.github/workflows/dbt_run_streamline_market_asset.yml
+++ b/.github/workflows/dbt_run_streamline_market_asset.yml
@@ -23,8 +23,9 @@ jobs:
   called_workflow_template:
     uses: FlipsideCrypto/analytics-workflow-templates/.github/workflows/dbt_run_template.yml@main
     with:
-      dbt_command: "[\"dbt run-operation run_sp_bulk_get_coin_market_cap_asset_metadata\",
-                \"dbt run-operation run_sp_bulk_get_coin_gecko_asset_metadata\"]"
+      dbt_command: >
+        dbt run-operation run_sp_bulk_get_coin_market_cap_asset_metadata;
+        dbt run-operation run_sp_bulk_get_coin_gecko_asset_metadata;
       environment: workflow_prod
       warehouse: ${{ vars.WAREHOUSE }}
     secrets: inherit 
