--- a/models/sources.yml
+++ b/models/sources.yml
@@ -109,6 +109,7 @@ sources:
       - name: logs
       - name: traces
       - name: transactions
+      - name: abis
   - name: polygon_core
     database: polygon
     schema: core
